--- a/Grid/Cards.html
+++ b/Grid/Cards.html
@@ -10,9 +10,24 @@
     <!-- with grid -->
     <section >
         <div id="grid">
-            <div id="card1"></div>
-            <div id="card1"></div>
-            <div id="card1"></div>
+            <div id="card1">
+                    <img src="../images/bg.jpg" id="image" alt="">
+                    <div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet fuga, doloribus, quaerat velit repellat possimus recusandae quam fugit officia ducimus laboriosam vel facere molestias harum in explicabo placeat odit accusantium?</p>
+                    </div>
+            </div>
+            <div id="card1">
+                <img src="../images/bg.jpg" id="image" alt="">
+                    <div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet fuga, doloribus, quaerat velit repellat possimus recusandae quam fugit officia ducimus laboriosam vel facere molestias harum in explicabo placeat odit accusantium?</p>
+                    </div>
+            </div>
+            <div id="card1">
+                <img src="../images/bg.jpg" id="image" alt="">
+                    <div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet fuga, doloribus, quaerat velit repellat possimus recusandae quam fugit officia ducimus laboriosam vel facere molestias harum in explicabo placeat odit accusantium?</p>
+                    </div>
+            </div>
             <div id="card1"></div>
             <div id="card1"></div>
             <div id="card1"></div>
